--- a/index.html
+++ b/index.html
@@ -9,17 +9,50 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span class="name-highlight">Mohammad Ullah</span> Website</h1>
+            <h1><span class="orange-highlight">Mohammad Ullah</span> Website</h1>
             <h3>Professional Web Developer</h3>
             <p>Hi! Mohammad Ullah here. I first started to learn programming for finding out of curiosity. I started to develop a passion for helping small businesses grow and I wanted to do this by amplifying their online presence. The best way for me to do this, or at least to start, is by building websites for small businesses in my area to really help them grow.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/mohammad-ullah-2239bb1b3/">HIRE ME</a>
         </div>
         <div class="half-width">
-            <img src="images/profile1.png" alt="">
+            <img src="images/profile2.png" alt="">
         </div>
         
     </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/profile1.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Area</h1>
+            <h3>Become A World Class Web Developer</h3>
+            <p>It's not as easy as many people think. Yes, it's difficult, but if you spend some time learning programming and do it regularly, you'll learn everything that is needed to become a developer and you'll get your first job without a computer science degree! Self-motivated Web Developer with high level of experience working on multiple projects.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/mohammad-ullah-2239bb1b3/">DOWNLOAD RESUME</a>
+        </div>
+
+    </section>
+
+
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div id="full-stack" class="half-width single-experience">
+            <h1>Full Stack Web Developer</h1>
+            <h3 class="orange-highlight">2021 - present | Pro Level Developer</h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+
+        </div>
+        <div id="baby-web" class="half-width single-experience">
+            <h1>Baby Web Developer</h1>
+            <h3 class="orange-highlight">2020 - 2021 | programming Hero Learner</h3>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+
+        </div>
+    </section>
+    <footer>
+        <p>© Mohammad Ullah 2021, all rights reserved.</p>
+    </footer>
 </body>
 </html>
